# tda_oct10_2025

./: .gitignore  PROJECT_STATE.md  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 03_oct10_daily_analysis.ipynb
paper/: calm_controls_findings.md  control_events_findings.md  oct10_daily_findings.md  oct10_minute_findings.md  oct10_surrogate_findings.md
scripts/: render_session11_report.py  run_session11.py
src/tda_oct10/: __init__.py  analysis_calm_controls.py  analysis_control_events.py  analysis_oct10.py  analysis_oct10_minute.py  analysis_oct10_surrogate.py  data_ingestion.py  indicators.py  nulls.py  tda_pipeline.py  trend_test.py  validation.py
tests/: test_analysis_oct10.py  test_analysis_oct10_minute.py  test_data_ingestion.py  test_indicators_and_trend.py  test_lorenz.py  test_nulls.py  test_session10_controls.py  test_session11_calm_controls.py  test_session9_surrogates.py  test_tda_pipeline.py
