[project]
name = "tda-oct10-2025"
version = "0.1.0"
description = "Topological Data Analysis of the October 10, 2025 cryptocurrency liquidation cascade."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "giotto-tda>=0.6",
    "numpy",
    "pandas",
    "scipy",
    "requests",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tda_oct10"]
